// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 eZgQkC"
  id={null}
  rows={null}
>
  <div
    className="Tag__TagContainer-sc-128kb3h-0 jDTvba"
    id={null}
    label="Tag life"
    style={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 eGFGis"
      fontSize="0.75em"
      fontWeight={600}
      letterSpacing="0.2px"
    >
      Tag life
    </p>
  </div>
   
  <div
    className="Tag__TagContainer-sc-128kb3h-0 jDTvba"
    id={null}
    label="Tag life"
    style={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 eGFGis"
      fontSize="0.75em"
      fontWeight={600}
      letterSpacing="0.2px"
    >
      Tag life
    </p>
  </div>
   
  <div
    className="Tag__TagContainer-sc-128kb3h-0 jDTvba"
    id={null}
    label="Tag life"
    style={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 eGFGis"
      fontSize="0.75em"
      fontWeight={600}
      letterSpacing="0.2px"
    >
      Tag life
    </p>
  </div>
   
  <div
    className="Tag__TagContainer-sc-128kb3h-0 jDTvba"
    id={null}
    label="Tag life"
    style={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 eGFGis"
      fontSize="0.75em"
      fontWeight={600}
      letterSpacing="0.2px"
    >
      Tag life
    </p>
  </div>
  <div
    className="Tag__TagContainer-sc-128kb3h-0 jDTvba"
    id={null}
    label="Tag life"
    style={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 eGFGis"
      fontSize="0.75em"
      fontWeight={600}
      letterSpacing="0.2px"
    >
      Tag life
    </p>
  </div>
   
  <div
    className="Tag__TagContainer-sc-128kb3h-0 jDTvba"
    id={null}
    label="Tag life"
    style={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 eGFGis"
      fontSize="0.75em"
      fontWeight={600}
      letterSpacing="0.2px"
    >
      Tag life
    </p>
  </div>
  <div
    className="Tag__TagContainer-sc-128kb3h-0 jDTvba"
    id={null}
    label="Info"
    style={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 eGFGis"
      fontSize="0.75em"
      fontWeight={600}
      letterSpacing="0.2px"
    >
      Info
    </p>
  </div>
   
  <div
    className="Tag__TagContainer-sc-128kb3h-0 dzizyc"
    id={null}
    label="Warning"
    style={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 eGFGis"
      fontSize="0.75em"
      fontWeight={600}
      letterSpacing="0.2px"
    >
      Warning
    </p>
  </div>
  <div
    className="Tag__TagContainer-sc-128kb3h-0 iaJSbE"
    id={null}
    label="Success"
    style={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 eGFGis"
      fontSize="0.75em"
      fontWeight={600}
      letterSpacing="0.2px"
    >
      Success
    </p>
  </div>
   
  <div
    className="Tag__TagContainer-sc-128kb3h-0 dPJEzp"
    id={null}
    label="Alert"
    style={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 eGFGis"
      fontSize="0.75em"
      fontWeight={600}
      letterSpacing="0.2px"
    >
      Alert
    </p>
  </div>
   
</section>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 ihnaIG"
  id={null}
  rows={null}
>
  <div
    className="Tag__TagContainer-sc-128kb3h-0 jDTvba"
    id={null}
    label="Tag"
    style={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 eGFGis"
      fontSize="0.75em"
      fontWeight={600}
      letterSpacing="0.2px"
    >
      Tag
    </p>
  </div>
</section>
`;

exports[` 3`] = `
Array [
  <div
    className="Bar__BarLayout-sc-1c4axau-1 bRfHqU"
    id={null}
    onClick={null}
  >
    <div
      className="Bar__Slot-sc-1c4axau-0 kEePMd"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-check fa-w-16 fa-2x Icon__StyledIcon-sc-1oa9m1v-1 OvdFF"
        color="success80"
        data-icon="check"
        data-prefix="far"
        focusable="false"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M435.848 83.466L172.804 346.51l-96.652-96.652c-4.686-4.686-12.284-4.686-16.971 0l-28.284 28.284c-4.686 4.686-4.686 12.284 0 16.971l133.421 133.421c4.686 4.686 12.284 4.686 16.971 0l299.813-299.813c4.686-4.686 4.686-12.284 0-16.971l-28.284-28.284c-4.686-4.686-12.284-4.686-16.97 0z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="Bar__Slot-sc-1c4axau-0 bdXCCw"
    >
      <div
        className="Tag__TagContainer-sc-128kb3h-0 jDTvba"
        id={null}
        label="Brief Label"
        style={null}
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 eGFGis"
          fontSize="0.75em"
          fontWeight={600}
          letterSpacing="0.2px"
        >
          Brief Label
        </p>
      </div>
    </div>
  </div>,
  <div
    className="Bar__BarLayout-sc-1c4axau-1 bRfHqU"
    id={null}
    onClick={null}
  >
    <div
      className="Bar__Slot-sc-1c4axau-0 kEePMd"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-times fa-w-10 fa-2x Icon__StyledIcon-sc-1oa9m1v-1 fyNWBU"
        color="alert80"
        data-icon="times"
        data-prefix="far"
        focusable="false"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="Bar__Slot-sc-1c4axau-0 bdXCCw"
    >
      <div
        className="Tag__TagContainer-sc-128kb3h-0 jDTvba"
        id={null}
        label="Tag with a long label because you cannot be concise with your words."
        style={null}
      >
        <p
          className="Typography__Paragraph-sc-19auepv-3 eGFGis"
          fontSize="0.75em"
          fontWeight={600}
          letterSpacing="0.2px"
        >
          Tag with a long label because you cannot be concise with your words.
        </p>
      </div>
    </div>
  </div>,
]
`;

exports[` 4`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 ihnaIG"
  id={null}
  rows={null}
>
  <div
    className="Tag__TagContainer-sc-128kb3h-0 jDTvba"
    id={null}
    label="Info"
    style={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 eGFGis"
      fontSize="0.75em"
      fontWeight={600}
      letterSpacing="0.2px"
    >
      Info
    </p>
  </div>
  <div
    className="Tag__TagContainer-sc-128kb3h-0 dzizyc"
    id={null}
    label="Warning"
    style={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 eGFGis"
      fontSize="0.75em"
      fontWeight={600}
      letterSpacing="0.2px"
    >
      Warning
    </p>
  </div>
  <div
    className="Tag__TagContainer-sc-128kb3h-0 iaJSbE"
    id={null}
    label="Success"
    style={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 eGFGis"
      fontSize="0.75em"
      fontWeight={600}
      letterSpacing="0.2px"
    >
      Success
    </p>
  </div>
  <div
    className="Tag__TagContainer-sc-128kb3h-0 dPJEzp"
    id={null}
    label="Alert"
    style={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 eGFGis"
      fontSize="0.75em"
      fontWeight={600}
      letterSpacing="0.2px"
    >
      Alert
    </p>
  </div>
</section>
`;

exports[` 5`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 ihnaIG"
  id={null}
  rows={null}
>
  <div
    className="Tag__TagContainer-sc-128kb3h-0 fPbOcH"
    id={null}
    label="Tag"
    style={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 eGFGis"
      fontSize="0.75em"
      fontWeight={600}
      letterSpacing="0.2px"
    >
      Tag
    </p>
  </div>
  <div
    className="Tag__TagContainer-sc-128kb3h-0 bmNYjo"
    id={null}
    label="Tag"
    style={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 eGFGis"
      fontSize="0.75em"
      fontWeight={600}
      letterSpacing="0.2px"
    >
      Tag
    </p>
  </div>
  <div
    className="Tag__TagContainer-sc-128kb3h-0 dvtpcQ"
    id={null}
    label="Tag"
    style={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 eGFGis"
      fontSize="0.75em"
      fontWeight={600}
      letterSpacing="0.2px"
    >
      Tag
    </p>
  </div>
  <div
    className="Tag__TagContainer-sc-128kb3h-0 YKCrU"
    id={null}
    label="Tag"
    style={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 eGFGis"
      fontSize="0.75em"
      fontWeight={600}
      letterSpacing="0.2px"
    >
      Tag
    </p>
  </div>
  <div
    className="Tag__TagContainer-sc-128kb3h-0 ieMKoZ"
    id={null}
    label="Tag"
    style={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 eGFGis"
      fontSize="0.75em"
      fontWeight={600}
      letterSpacing="0.2px"
    >
      Tag
    </p>
  </div>
  <div
    className="Tag__TagContainer-sc-128kb3h-0 bGpqqZ"
    id={null}
    label="Tag"
    style={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 eGFGis"
      fontSize="0.75em"
      fontWeight={600}
      letterSpacing="0.2px"
    >
      Tag
    </p>
  </div>
  <div
    className="Tag__TagContainer-sc-128kb3h-0 gDLfUy"
    id={null}
    label="Tag"
    style={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 eGFGis"
      fontSize="0.75em"
      fontWeight={600}
      letterSpacing="0.2px"
    >
      Tag
    </p>
  </div>
  <div
    className="Tag__TagContainer-sc-128kb3h-0 ejtsdP"
    id={null}
    label="Tag"
    style={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 eGFGis"
      fontSize="0.75em"
      fontWeight={600}
      letterSpacing="0.2px"
    >
      Tag
    </p>
  </div>
</section>
`;
